compiler/tests/fixtures/invalid/semantics/query_duplicate_values.viv
// Invalid: query has duplicate values in set predicate

action fight:
    roles:
        @fighter:
            as: initiator

query bad-dup:
    roles:
        @witness:
            as: character
    action:
        any: fight
    bystanders:
        any: @witness, @witness
